starting to syle home page

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Welcome</title>
     <link rel="stylesheet" type="text/css" href="style.css" />
     <script src="script.js"></script>
   </head>
@@ -13,7 +13,7 @@
       class="logo"
       src="https://static1.squarespace.com/static/5cffc325ad84aa000154316a/t/5d1cecc45bf41a00017a89aa/1611008966705/?format=1500w"
     />
-    <main>
+    <main class="index-main">
       <h1>100 Days of Code by LA</h1>
 
       <div class="button-container">
