--- a/home.html
+++ b/home.html
@@ -5,15 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" type="text/css" href="style.css" />
-    <script src="script.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/styles.css" />
   </head>
   <body>
     <main class="home-main">
       <nav class="nav">
-        <li><a href="#home"> Home</a></li>
-        <li><a href="#about">About</a></li>
-        <li><a href="#projects">Projects</a></li>
+        <li><a href="/home.html"> Home</a></li>
+        <li><a href="/about.html">About</a></li>
+        <li><a href="/projects.html">Projects</a></li>
       </nav>
       <div id="purecss" class="heart"></div>
       <p>
@@ -21,5 +20,6 @@
         what I've done.
       </p>
     </main>
+    <script src="script.js" defer></script>
   </body>
 </html>
