creating digital clock project

--- a/projects.html
+++ b/projects.html
@@ -16,7 +16,15 @@
     <main>
       <div>
         <h1>This is where the projects will go</h1>
+        <p>Stop watch</p>
         <a href="assets/projects/stopwatch/stopwatch.html" class="project"
+          >See Code</a
+        >
+
+        <p>digital clock</p>
+        <a
+          href="assets/projects/digital-clock/digital-clock.html"
+          class="project"
           >See Code</a
         >
       </div>
