--- a/assets/projects/calculator/cal.html
+++ b/assets/projects/calculator/cal.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator App by LA</title>
+    <link rel="stylesheet" type="text/css" href="/assets/css/calculator.css" />
+
 </head>
 <body>
    <main>
